<resources>

    <!-- Служебные ресурсы -->
    <string name="notification_period_id">Notification period</string>
    <string name="is_rest_planner_checked">Is rest planner checked</string>
    <string name="channel_name">Rest planner notification channel</string>
    <string name="channel_description">For periodic rest notifications</string>
    <string name="time_template">"%02d:%02d"</string>

    <string name="app_name">Coffee break</string>
    <string name="every_15_minutes">Каждые 15 минут</string>
    <string name="every_30_minutes">Каждые 30 минут</string>
    <string name="every_45_minutes">Каждые 45 минут</string>
    <string name="every_60_minutes">Каждые 60 минут</string>
    <string name="every_90_minutes">Каждые 90 минут</string>
    <string name="rest_enabled">Активность</string>
    <string name="time">Время</string>
    <string name="days">Дни</string>
    <string name="rest_time_period">Периодичность оповещений</string>
    <string name="rest_days">Дни активности</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="notification_title">Время отдохнуть от работы ^_^</string>
    <string name="tv_time_period_prefix">Периодичность оповещений</string>
    <string name="tv_time_period_postfix">минут</string>
    <string name="end">до</string>
    <string name="start">с</string>
    <string name="save_settings">Сохранить</string>
    <string name="snackbar_save_settings">Настройки успешно сохранены</string>
    <string name="notification_period_error">Период оповещений должен быть больше 10 минут!</string>
</resources>