<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_choose_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_days"
        android:textColor="?attr/colorTextOnBottomSheetDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_days">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>