<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/layout_padding">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_planner_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/rest_enabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

    <LinearLayout
        android:id="@+id/ll_time_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_planner_state">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_time_period_prefix" />

        <EditText
            android:id="@+id/ed_notification_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3"
            android:textSize="@dimen/text_size" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_time_period_postfix" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_active_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_time_period">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/rb_padding"
            android:text="@string/start" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/picker_background"
            android:gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/start_time_hour_picker"
                style="@style/RestPlanner.NumberPicker" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/time_picker_divider" />

            <NumberPicker
                android:id="@+id/start_time_minute_picker"
                style="@style/RestPlanner.NumberPicker" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/layout_padding"
            android:paddingEnd="@dimen/rb_padding"
            android:text="@string/end" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/picker_background"
            android:gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/end_time_hour_picker"
                style="@style/RestPlanner.NumberPicker" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_divider" />

            <NumberPicker
                android:id="@+id/end_time_minute_picker"
                style="@style/RestPlanner.NumberPicker" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_active_period" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_helper_text"
        android:textAlignment="center"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/helper_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>