<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/layout_padding">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_choose_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rest_time_period"
        android:textColor="?attr/colorTextOnBottomSheetDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_active_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_period"></LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_active_period">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_time_period_prefix"
            android:textColor="?attr/colorTextOnBottomSheetDialog" />

        <EditText
            android:id="@+id/ed_time_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin"
            android:ems="2"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:lines="1"
            android:maxLength="3" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_time_period_postfix"
            android:textColor="?attr/colorTextOnBottomSheetDialog" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>